# Alpha-Queue-Reactive

./: .gitignore  CMakeLists.txt  README.md  env.yml  estimate.py  generate_fit_report.py  main.py  mbp_to_qr.py  orderbook.cpp  orderbook.h  pyproject.toml  qr_model.cpp  qr_model.h  race.cpp  race.h  run_baseline.cpp  run_metaorder.cpp  run_metaorder_bcp.cpp  run_theta_sweep.sh  sample.cpp  sample_alpha.cpp  simulation.cpp  simulation.h  test.ipynb
.virtual_documents/notebooks/: Untitled.ipynb  alpha.ipynb  estimation.ipynb  fit.ipynb  race.ipynb  vol_fit.ipynb  volume.ipynb
cpp/include/: orderbook.h  qr_model.h  race.h  simulation.h  strategy.h
cpp/src/: orderbook.cpp  qr_model.cpp  race.cpp  simulation.cpp
figures/: fit_report.tex  report.md
notebooks/: alpha.ipynb  estimation.ipynb  estimation2.ipynb  fit.ipynb  hft_alpha.ipynb  paper_figures.ipynb  pnl_fit.ipynb  race.ipynb  races2.ipynb  signal_check.ipynb  vol_fit.ipynb  volume.ipynb
qr/: main.py  pyproject.toml
report/: qr_report.aux  qr_report.out  qr_report.tex  qr_report.toc  qr_slides.aux  qr_slides.nav  qr_slides.out  qr_slides.tex  qr_slides.toc
scripts/: daily_estimates.py  estimate.py  estimate_qr_params.py  mbp_to_qr.py
src/: registry.py
src/qr/: estimations.py  registry.py
tests/: orderbook_test.cpp  qr_model_test.cpp
