[project]
name = "qr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyter-black>=0.4.0",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-lsp>=5.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "polars>=1.36.1",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server[all]>=1.14.0",
    "scienceplots>=2.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
