[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qr"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasketches>=5.2.0",
    "lobib[jupyter]",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
lobib = { git = "ssh://git@gitlab.labos.polytechnique.fr/lobib/lobib.git", rev = "v1.2.0" }

[tool.hatch.build.targets.wheel]
packages = ["src/qr"]

[dependency-groups]
dev = [
    "memray>=1.19.1",
]
